feat(complexity): Add complexity support for relations

--- a/documentation/docs/graphql/relations.mdx
+++ b/documentation/docs/graphql/relations.mdx
@@ -662,6 +662,7 @@ The following options can be passed to the `@Relation` or `@Connection` decorato
 
 * `relationName` - The name of the relation to use when looking up the relation from the `QueryService`
 * `nullable` - Set to `true` if the relation is nullable.
+* `complexity` - Set to specify relation complexity. For more info see [complexity docs](https://docs.nestjs.com/graphql/complexity)
 * `disableRead` -  Set to `true` to disable read operations.
 * `disableUpdate` -  Set to `true` to disable update operations.
 * `disableRemove` -  Set to `true` to disable remove operations.
