docs(hooks): Clarify note about context

--- a/documentation/docs/graphql/hooks.mdx
+++ b/documentation/docs/graphql/hooks.mdx
@@ -29,8 +29,9 @@ If you provide a custom `create` or `update` DTO you can also decorate those cla
 :::
 
 :::note
-All of the examples reference a GqlContext. This is for the sake of the example you could define a custom type the
-represents the information in the context based on the guards and interceptors used in your application.
+All of the examples reference a GqlContext. This was defined for the sake of the example. It is recommended that you
+define a custom type that represents the information in the context based on the guards and interceptors used in your
+application.
 
 We have defined our `GqlContext` as
 
