docs(graphql): Add docs for allowedComparisons option

--- a/documentation/docs/utilities/query-helpers.mdx
+++ b/documentation/docs/utilities/query-helpers.mdx
@@ -136,7 +136,7 @@ The resulting paged dtos would be.
 ]
 ```
 
-## `applyQuery`
+## applyQuery
 
 The `applyQuery` uses the `applyFilter`, `applySorting`, and `applyPaging` methods to apply a `Query` to an array of
 DTOs.
