docs(): Fix broken links

--- a/documentation/blog/2020-05-07-v0.11.0.mdx
+++ b/documentation/blog/2020-05-07-v0.11.0.mdx
@@ -175,7 +175,7 @@ Once you have updated your module you can remove the old resolver.
 Be sure to add the `NestjsQueryTypeOrmModule` or `NestjsQuerySequelizeModule` to the imports in `NestjsQueryGraphQLModule`.
 :::
 
-To read more about the auto-generated resolvers check out the [resolvers docs](../graphql/resolvers)
+To read more about the auto-generated resolvers check out the [resolvers docs](docs/graphql/resolvers)
 
 
 ### Example
