--- a/documentation/docs/graphql/queries.mdx
+++ b/documentation/docs/graphql/queries.mdx
@@ -189,7 +189,7 @@ By default if you do not provided an arguments you can query for all records.
 
 Filtering in `query-graphql` has has an object based syntax
 
-For a full reference of filter operations [see filter reference](../concepts/queries#filter-reference)
+For a full reference of filter operations [see filter reference](../concepts/queries.mdx#filter-reference)
 
 The following example filters for all todoItems that are marked completed.
 
@@ -829,7 +829,7 @@ When using the strategy queries that return multiple records will return an `Arr
 
 Filtering in `query-graphql` has has an object based syntax
 
-For a full reference of filter operations [see filter reference](../concepts/queries#filter-reference)
+For a full reference of filter operations [see filter reference](../concepts/queries.mdx#filter-reference)
 
 The following example filters for all todoItems that are marked completed.
 
@@ -1234,7 +1234,7 @@ When using the strategy queries that return multiple records will return an arra
 
 Filtering in `query-graphql` has has an object based syntax
 
-For a full reference of filter operations [see filter reference](../concepts/queries#filter-reference)
+For a full reference of filter operations [see filter reference](../concepts/queries.mdx#filter-reference)
 
 The following example filters for all todoItems that are marked completed.
 
