--- a/documentation/docs/graphql/relations.mdx
+++ b/documentation/docs/graphql/relations.mdx
@@ -862,7 +862,8 @@ Now any requests that go to the `update` or `remove` endpoints will require the 
 
 ### Relation Mixin
 
-If you are using the [resolvers individually](./resolvers#individual-resolvers) you can use the following mixins to add relations functionality.
+If you are using the [resolvers individually](./resolvers.mdx#individual-resolvers) you can use the following mixins to
+add relations functionality.
 
 #### Relatable
 
