--- a/documentation/docs/introduction/example.mdx
+++ b/documentation/docs/introduction/example.mdx
@@ -17,7 +17,7 @@ nest new nestjs-query-getting-started
 
 ## Install Dependencies
 
-[Install your packages](./install).
+[Install your packages](./install.md).
 
 :::note
 Be sure to install the correct ORM package!
