--- a/documentation/docs/migration-guides/v0.10.x-to-v0.11.x.mdx
+++ b/documentation/docs/migration-guides/v0.10.x-to-v0.11.x.mdx
@@ -34,4 +34,4 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO) {
 
 ## New Features
 
-To see other non-breaking features checkout to [v0.11.0 blog post](../../blog/v0.11.0)
+To see other non-breaking features checkout to [v0.11.0 blog post](blog/v0.11.0)
