--- a/documentation/docs/persistence/services.mdx
+++ b/documentation/docs/persistence/services.mdx
@@ -174,7 +174,8 @@ In the above example the DTO and entity are the same shape, if you have a case w
 
 The `nestjs-query` QueryService uses a common `Query` interface that allows you use a common type regardless of the persistence library in use.
 
- To query for records from your service you can use the `query` method which will return a `Promise` of an array of entities. To read more about querying take a look at the [Queries Doc](../concepts/queries).
+ To query for records from your service you can use the `query` method which will return a `Promise` of an array of
+ entities. To read more about querying take a look at the [Queries Doc](../concepts/queries.mdx).
 
 #### Example
 
