docs(auth): Add authorizer docs

--- a/documentation/docs/graphql/hooks.mdx
+++ b/documentation/docs/graphql/hooks.mdx
@@ -4,6 +4,8 @@ title: Hooks
 
 `nestjs-query` provides the following hooks that allow you to modify incoming requests.
 
+* `@BeforeFindOne` - invoked before any `findOne` query.
+* `@BeforeQueryMany` - invoked before any `queryMany` query.
 * `@BeforeCreateOne` - invoked before any `createOne` mutation.
 * `@BeforeCreateMany` - invoked before any `createMany` mutation.
 * `@BeforeUpdateOne` - invoked before any `updateOne` mutation.
