docs(): Fixes for latest version

--- a/documentation/blog/2020-05-07-v0.11.0.mdx
+++ b/documentation/blog/2020-05-07-v0.11.0.mdx
@@ -1,5 +1,4 @@
 ---
-id: v0.11.0
 title: v0.11.0
 author: Doug Martin
 author_title: Creator
@@ -175,7 +174,7 @@ Once you have updated your module you can remove the old resolver.
 Be sure to add the `NestjsQueryTypeOrmModule` or `NestjsQuerySequelizeModule` to the imports in `NestjsQueryGraphQLModule`.
 :::
 
-To read more about the auto-generated resolvers check out the [resolvers docs](docs/graphql/resolvers)
+To read more about the auto-generated resolvers check out the [resolvers docs](/docs/graphql/resolvers)
 
 
 ### Example
