--- a/documentation/blog/2020-01-28-v0.0.5.md
+++ b/documentation/blog/2020-01-28-v0.0.5.md
@@ -1,5 +1,4 @@
 ---
-id: v0.0.5
 title: v0.0.5
 author: Doug Martin
 author_title: Creator
@@ -9,7 +8,7 @@ tags: [releases, patch]
 ---
 
 * Add ability to specify query defaults.
-  * `defaultResultSize` -  the default number of results to return from a query. [See Default Paging](docs/graphql/resolvers#default-paging)
-  * `maxResultsSize` -  the maximum number of results to return from a query. [See Default Paging](docs/graphql/resolvers#default-paging)
-  * `defaultSort` -  The default sort to apply to queries. [See Default Sort](docs/graphql/resolvers#default-sort)
-  * `defaultFilter` -  The default filter to apply to queries. [See Default Filter](docs/graphql/resolvers#default-filter)
+  * `defaultResultSize` -  the default number of results to return from a query. [See Default Paging](/docs/graphql/resolvers#default-paging)
+  * `maxResultsSize` -  the maximum number of results to return from a query. [See Default Paging](/docs/graphql/resolvers#default-paging)
+  * `defaultSort` -  The default sort to apply to queries. [See Default Sort](/docs/graphql/resolvers#default-sort)
+  * `defaultFilter` -  The default filter to apply to queries. [See Default Filter](/docs/graphql/resolvers#default-filter)
