docs(): Fix bad link in authorization docs

--- a/documentation/docs/graphql/authorization.mdx
+++ b/documentation/docs/graphql/authorization.mdx
@@ -6,8 +6,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 :::note
-The following section assumes you are familiar with [authentication in nestjs](https://docs.nestjs
-.com/techniques/authentication).
+The following section assumes you are familiar with [authentication in nestjs](https://docs.nestjs.com/techniques/authentication).
 :::
 
 `nestjs-query` provides authorization helpers out of the box to reduce the amount of boilerplate typically required.
